tests/file_SyntaxError/file_SyntaxError_1_expected.txt
tests/file_SyntaxError/file_SyntaxError_1.ml:2 11-17
  I'm glad you're looking at this file =)
           ^^^^^^ the syntax's' wrong.
Note: the location indicated might not be accurate.
